SERVER-67780 Incorrect $group rewrite for timeseries collection when the accumulator uses meta field